Added Icon and Fixed Bugs
Fixed maximum sizing of controls box.
Added an icon.
Added META.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Wallpaper Generator by Saqib Ali</title>
+    <title>Time Table Wallpaper Creator - Saqib Ali</title>
+    <meta name="Description" content="Create your course schedule wallpapers easily and conveniently.">
+    <meta name="Keywords" content="course schedule time table easy generate generator saqib ali pysaqib">
+
 
     <link rel="stylesheet" href="css/index-css.css">
 
     <script src="js/index-js.js"></script>
     <script src="js/jquery.js"></script>
+
+    <link rel="shortcut icon" href="timetable-icon.png" type="image/png" />
+
 
 </head>
 <body>
